<resources>
    <string name="app_name">Polideportivo</string>
    <string name="archivo_preferencias">es.miguel.polideportivo_v2.PREFERENCIA_FILE_KEY</string>

    <string name="email">Email</string>

    <string name="password">Contraseña</string>

    <string name="login">Entrar</string>

    <string name="forgot_password">Recuperar contraseña</string>

    <string name="or">OR</string>

    <string name="google_icon">google icon</string>

    <string name="facebook_icon">facebook icon</string>

    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="primerApellido">1ºApellido</string>
    <string name="segundoApellido">2ºApellido</string>
    <string name="direccion">Dirección</string>
    <string name="movil">Móvil</string>
    <string name="repitePassword">Repite contraseña</string>
    <string name="reservaPista">RESERVA PISTAS</string>
    <string name="reservaGim">ACTIVIDADES GIMNASIO</string>
    <string name="reservaPiscina">ACTIVIDADES PISCINA</string>
    <string name="horariosDisponibles">HORARIOS DISPONIBLES</string>
    <string name="dia">Lun</string>
    <string name="diaNum">4</string>
    <string name="mes">Abr</string>
    <string name="confirmarReserva">CONFIRMAR RESERVA</string>
    <string name="padel">Pádel</string>
    <string name="entrar_con">Entrar con</string>
    <string name="spinning">Spinning</string>
    <string name="tipo_deporte">Tipo Deporte</string>
    <string name="ver">VER</string>
    <string name="reservar">RESERVAR</string>
    <string name="seleccionarActividad">Seleccionar Actividad</string>
    <string name="seleccionaFecha">Selecciona fecha</string>
    <string name="seleccionaHora">Selecciona hora</string>
    <string name="centro">CENTRO</string>
    <string name="pistas">PISTAS</string>
    <string name="horarios">HORARIO</string>
    <string name="reservas">RESERVAS</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="reservas_pistas">RESERVAS PISTAS</string>
    <string name="reservas_actividades">RESERVAS ACTIVIDADES</string>
    <string name="novedades">NOVEDADES</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="contacto">CONTACTO</string>
    <string name="ubicacion">UBICACIÓN</string>
    <string name="horario_lunes"><b>Lunes:</b>         7:30 a 22:30h</string>
    <string name="horario_martes"><b>Martes:</b>        7:30 a 22:30h</string>
    <string name="horario_miercoles"><b>Miércoles:</b>   7:30 a 22:30h</string>
    <string name="horario_jueves"><b>Jueves:</b>        7:30 a 22:30h</string>
    <string name="horario_viernes"><b>Viernes:</b>       7:30 a 22:30h</string>
    <string name="horario_sabado"><b>Sábado:</b>        7:30 a 14:00h</string>
    <string name="horario_domingo"><b>Domingo:</b>     7:30 a 14:00h</string>
    <string name="sin_reservas">No hay reservas pendientes</string>
    <string name="polideportivo">Un polideportivo es un complejo deportivo versátil que ofrece
        instalaciones para una variedad de deportes y actividades físicas. Con múltiples canchas
        y campos adaptados para baloncesto, voleibol, tenis, fútbol indoor, entre otros, permite
        la participación en competiciones organizadas y juegos casuales. Además, puede incluir
        gimnasios, áreas de ejercicios, piscinas y estudios de aeróbicos. Con el objetivo de
        promover la actividad física y la vida saludable, los polideportivos son lugares de
        encuentro para deportistas y entusiastas del deporte.</string>
    <string name="contacto2"><b>Teléfono:</b> 666555444 \n \n<b>Email:</b>
        polideportivo@polideportivo.com \n \n<b>Ubicación:</b>  Calle Inventada nº12</string>

</resources>