<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


        <LinearLayout
        android:id="@+id/layout_horario1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:id="@+id/layout_horario1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/black">
                <TextView
                    android:id="@+id/horario_flecha_izq"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    app:drawableLeftCompat="@drawable/flecha_izq"
                    android:paddingStart="20dp" />

                <TextView
                    android:id="@+id/tv_horario_titulo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/horarios"
                    android:textColor="@color/teal_200"
                    android:textSize="26sp"
                    android:textStyle="bold" />
                </LinearLayout>


         </LinearLayout>
         <LinearLayout
        android:id="@+id/layout_horario2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_horario1"
        app:layout_constraintVertical_bias="0.5">

             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/pista_padel"
                 android:scaleType="fitXY"/>

         </LinearLayout>
        <LinearLayout
        android:id="@+id/layout_horario3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_horario2"
        app:layout_constraintVertical_bias="0.5">
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
           <TextView
               android:id="@+id/tv_horario_lunes"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:text="@string/horario_lunes"
               android:textColor="@color/teal_200"
               android:textSize="20sp"
               android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/tv_horario_martes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/horario_martes"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/tv_horario_miercoles"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/horario_miercoles"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/tv_horario_jueves"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/horario_jueves"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/tv_horario_viernes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/horario_viernes"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/tv_horario_sabado"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/horario_sabado"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/tv_horario_domingo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/horario_domingo"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:paddingStart="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>



        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>