<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/teal_200"
            android:textSize="35dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:maxLength="30"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/signin"
            tools:layout_editor_absoluteX="9dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:layout_editor_absoluteX="16dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="170dp">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="390dp"
            android:layout_height="54dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:backgroundTint="#30ffffff"
            android:text="@string/login"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintVertical_bias="0.046"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/others"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="20dp"
            android:text="@string/entrar_con"
            android:textColor="@color/teal_200" />

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="0.05"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:src="@drawable/google" />

        <TextView
            android:id="@+id/registrarse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="5dp"
            android:text="@string/registrarse"
            android:textColor="@color/teal_200" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>