<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/cv_centro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#15ffffff">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/location"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/centro"
                android:textSize="16sp"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

       <LinearLayout
                android:id="@+id/cv_horarios"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#80000000">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/reloj"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horarios"
                    android:textSize="16sp"
                    android:textColor="@color/teal_200"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <LinearLayout
                android:id="@+id/cv_reserva_pistas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#80000000">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/pelota"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservaPista"
                    android:textSize="16sp"
                    android:textColor="@color/teal_200"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cv_reserva_gim"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#15ffffff">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/gim"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reservaGim"
                    android:textSize="16sp"
                    android:textColor="@color/teal_200"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <LinearLayout
            android:id="@+id/cv_reserva_piscina"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#15ffffff">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/piscina1"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservaPiscina"
                android:textSize="16sp"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cv_mis_reservas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#80000000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/calendar"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mis_reservas"
                android:textSize="16sp"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout3">

        <LinearLayout
            android:id="@+id/cv_novedades"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#80000000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/novedades"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/novedades"
                android:textSize="16sp"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cv_contacto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#15FFFFFF">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/contacto"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:textSize="16sp"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>





<!--<RelativeLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent">

<FrameLayout
    android:id="@+id/frame1"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/IvReservaPista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pista"/>

        <TextView
            android:id="@+id/my_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reservaPista"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="#40000000"/>

    </androidx.cardview.widget.CardView>
</FrameLayout>

<FrameLayout
    android:id="@+id/frame2"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_below="@+id/frame1"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/IvReservaGim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/gimnasio"/>

        <TextView
            android:id="@+id/my_textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reservaGim"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="#40000000"/>
    </androidx.cardview.widget.CardView>

</FrameLayout>

<FrameLayout
    android:id="@+id/frame3"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_below="@+id/frame2"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:src="@drawable/piscina"
            tools:ignore="ContentDescription"
            android:id="@+id/IvReservaPiscina"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <TextView
            android:id="@+id/my_textview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reservaPiscina"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="#30000000"/>

    </androidx.cardview.widget.CardView>

</FrameLayout>-->
